--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,15 +1,37 @@
-<div class="pagination">
-    {% if paginator.previous_page %}
-        <a href="{{ site.url }}{{ paginator.previous_page_path }}" class="previous">«</a>
-    {% else %}
-        <span class="previous hidden">«</span>
-    {% endif %}
+{% if paginator.total_pages > 1 %}
+<nav class="pagination-wrap">
+    <ul class="pagination">
+        {% if paginator.previous_page %}
+        <li>
+            <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+            </a>
+        </li>
+        {% endif %}
 
-    <span class="page_number ">page {{ paginator.page }} of {{ paginator.total_pages }}</span>
+        {% for page in (1..paginator.total_pages) %}
+            {% if page == paginator.page %}
+            <li class="active">
+                <a href="#">{{ page }}</a>
+            </li>
+            {% elsif page == 1 %}
+            <li>
+                <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
+            </li>
+            {% else %}
+            <li>
+                <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+            </li>
+            {% endif %}
+        {% endfor %}
 
-    {% if paginator.next_page %}
-        <a href="{{ site.url }}{{ paginator.next_page_path }}" class="next">»</a>
-    {% else %}
-        <span class="next hidden">»</span>
-    {% endif %}
-</div>
+        {% if paginator.next_page %}
+        <li>
+            <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
+{% endif %}
