--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,54 +1,21 @@
----
-layout: compress
----
-<!DOCTYPE html>
-<html lang="en">
-<head>
+{% include header.html %}
 
-    {% if site.analytics-google %}
-        {% include analytics-google.html %}
-    {% endif %}
+    {% include title-group.html %}
 
-    <meta charset="utf-8">
-    <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
-    <meta name=viewport content="width=device-width, initial-scale=1">
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
 
-    <meta name=description content="{{ site.bio }}">
-    <meta name=author content="{{ site.name }}">
-    <meta property="og:image" content="{{ site.url }}/{{ site.picture }}">
-    <meta property="og:type" content="profile">
+                    {% for post in paginator.posts %}
+                      {% include tile.html %}
+                    {% endfor %}
 
-    {% seo %}
-    
-    {% include favicon.html %}
+                    {% include pagination.html %}
 
-    <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}{{ "/feed.xml" }}" />
-
-    <style>
-    {% capture scss_sheet %}{% include style.scss %}{% endcapture %}
-    {{ scss_sheet | scssify }}
-    </style>
-
-</head>
-<body>
-
-    <div class="wrapper-{% if site.width == "normal" %}normal{% elsif site.width == "large" %}large{% endif %}">
-        {% if page.tag %}
-            <div class="post">
-        {% else %}
-            {% if showHeader != true %}
-                <div class="page {{ page.title | downcase }}">
-            {% else %}
-                <div class="{{ page.title | downcase }}">
-            {% endif %}
-        {% endif %}
-
-            {{ content }}
+                </div>
+            </div>
         </div>
-    </div>
+    </main>
 
-    {% include icons.html %}
-
-</body>
-</html>
+{% include footer.html %}
