--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,6 +1,6 @@
 <div class="social-links">
     {% if site.facebook %}
-        <a class="link" data-title="facebook.com/{{ site.facebook }}" href="hhttps://www.facebook.com/profile.php?id=100024852074442" target="_blank">
+        <a class="link" data-title="facebook.com/{{ site.facebook }}" href="https://www.facebook.com/profile.php?id=100024852074442" target="_blank">
             <svg class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg>
         </a>
     {% endif %}
