--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,35 @@
         <h2 class="description">{{ site.bio }}</h2>
 
         {% include social-links.html %}
+		
+		
+		<div class="site-category">
+    <ul class='cat1'>
+      <li><a href="/">Home</a></li>
+      <li><a href="/">Hailey</a>
+        <ul>
+            <li><a href="/Hailey/The Dreamchaser">The Dreamchaser</a></li>
+            <li><a href="/Hailey/Music">Music</a></li>
+            <li><a href="/Hailey/Film">Film</a></li>
+        </ul>
+      </li>
+
+      <li><a href="/">Data</a>
+        <ul>
+          <li><a href="/Data/R">R</a></li>
+	   	<li><a href="/Data/Google">Google</a></li>
+        </ul>
+      </li>
+
+      <li><a href="/">Programming</a>
+        <ul>
+          <li><a href="/Programming/C Language">C Language</a></li>
+        </ul>
+      </li>
+
+    </ul>
+  </div>
+
     </header>
 {% endif %}
 
