--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 {% if page.title == "Home"
-   or page.title == "Blog"
+   or page.title == "The Dreamchaser"
    or page.title == "Projects"
    or page.title == "Tags"
 %}{% assign showHeader = true %}{% endif %}
@@ -21,33 +21,7 @@
 
         {% include social-links.html %}
 		
-		
-		<div class="site-category">
-    <ul class='cat1'>
-      <li><a href="/">Home</a></li>
-      <li><a href="/">Hailey</a>
-        <ul>
-            <li><a href="/Hailey/The Dreamchaser">The Dreamchaser</a></li>
-            <li><a href="/Hailey/Music">Music</a></li>
-            <li><a href="/Hailey/Film">Film</a></li>
-        </ul>
-      </li>
-
-      <li><a href="/">Data</a>
-        <ul>
-          <li><a href="/Data/R">R</a></li>
-	   	<li><a href="/Data/Google">Google</a></li>
-        </ul>
-      </li>
-
-      <li><a href="/">Programming</a>
-        <ul>
-          <li><a href="/Programming/C Language">C Language</a></li>
-        </ul>
-      </li>
-
-    </ul>
-  </div>
+	
 
     </header>
 {% endif %}
