--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:700|Noto+Sans+KR&display=swap&subset=korean');
 
 @import "base/variables";
 @import "base/normalize";
