--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,10 @@ layout: compress
     </div>
 
     {% include icons.html %}
+				
+				<script src="/assets/lib/jquery-1.12.0.min.js"></script>
+<script src="/assets/lib/jquery.magnific-popup.min.js"></script>
+<script src="/assets/js/index.js"></script>
 
 </body>
 </html>
