--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,9 +50,9 @@ layout: compress
 
     {% include icons.html %}
 				
-<script src="/assets/lib/jquery-1.12.0.min.js"></script>
-<script src="/assets/lib/jquery.magnific-popup.min.js"></script>
-<script src="/assets/js/index.js"></script>
+<script src="http://hailey99.github.io/assets/lib/jquery-1.12.0.min.js"></script>
+<script src="http://hailey99.github.io/assets/lib/jquery.magnific-popup.min.js"></script>
+<script src="http://hailey99.github.io/assets/js/index.js"></script>
 
 </body>
 </html>
