글씨체 바꿔봄

--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,4 +1,6 @@
-$fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700;900&display=swap');
+
+$fontSans: 'Noto Sans KR', sans-serif
 $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
 $alpha: #666
