--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -26,7 +26,8 @@
         > .item > .link
             font-size: 1.4rem
             padding: 20px 10px
-
+            
+/* 요놈 있으면 home에선 nav가 가운데로 감
 .nav-home
     margin-top: 40px
     text-align: center
@@ -44,3 +45,4 @@
 
             &:hover
                 color: $alpha
+*/
